fixed backdrop filter on safari

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -23,6 +23,7 @@ section .bg-light code, section .bg-light pre {
   width: 100%;
   height: 100%;
   backdrop-filter: brightness(0.45) hue-rotate(-10deg);
+  -webkit-backdrop-filter: brightness(0.45) hue-rotate(-10deg);
   padding: 4rem 2rem;
 }
 
